--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css" />
     <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous"
+  />
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+    rel="stylesheet"
+  />
+      <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,9 +32,95 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+
       <!-- Timeblocks go here -->
+      <div id="hour-9" class=" col-md-12 row time-block">
+      <div class="">9AM</div>
+      <div class=" input-group mb-3">
+        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary" type="save-tm">save time</button>
+        </div>
+      </div>
     </div>
 
+      <div id="hour-10" class="row  col-md-12 time-block">
+        <div class="">10AM</div>
+        <div class=" input-group mb-3">
+          <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="save-tm">save time</button>
+          </div>
+        </div>
+      </div>
+
+      <div id="hour-11" class="row  col-md-12 time-block">
+        <div class="">11AM</div>
+        <div class=" input-group mb-3">
+          <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="save-tm">save time</button>
+          </div>
+        </div>
+      </div>
+
+      <div id="hour-12" class="row  col-md-12 time-block">
+        <div class="">12PM</div>
+        <div class=" input-group mb-3">
+          <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="save-tm">save time</button>
+          </div>
+        </div>
+      </div>
+    
+  <div id="hour-13" class="row  col-md-12 time-block">
+        <div class="">1PM</div>
+        <div class=" input-group mb-3">
+          <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="save-tm">save time</button>
+          </div>
+        </div>
+      </div>
+
+      <div id="hour-14" class="row  col-md-12 time-block">
+        <div class="">2PM</div>
+        <div class=" input-group mb-3">
+          <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="save-tm">save time</button>
+          </div>
+        </div>
+      </div>
+
+      <div id="hour-15" class="row  col-md-12 time-block">
+        <div class="">3PM</div>
+        <div class=" input-group mb-3">
+          <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="save-tm">save time</button>
+          </div>
+        </div>
+      </div>
+      <div id="hour-16" class="row  col-md-12 time-block">
+        <div class="">4PM</div>
+        <div class=" input-group mb-3">
+          <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="save-tm">save time</button>
+          </div>
+        </div>
+      </div>
+      <div id="hour-17" class="row  col-md-12 time-block">
+        <div class="">5PM</div>
+        <div class=" input-group mb-3">
+          <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="save-tm">save time</button>
+          </div>
+        </div>
+      </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
