--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div id="hour-9" class=" col-md-12 row time-block">
       <div class=" 9 ">9AM</div>
       <div class=" input-group mb-3">
-        <input type="text" class="9t form-control"  placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <input type="text" class="9t form-control"  placeholder="Add task"  >
         <div class="input-group-append">
           <button class="btn 9b btn-outline-secondary" type="save-tm">Save task</button>
         </div>
@@ -47,7 +47,7 @@
       <div id="hour-10" class="row  col-md-12 time-block">
         <div class="10">10AM</div>
         <div class=" input-group mb-3">
-          <input type="text" class="10t form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <input type="text" class="10t form-control" placeholder="Add task"  >
           <div class="input-group-append">
             <button class="btn  10b btn-outline-secondary" type="save-tm">Save task</button>
           </div>
@@ -57,7 +57,7 @@
       <div id="hour-11" class="row  col-md-12 time-block">
         <div class="11">11AM</div>
         <div class=" input-group mb-3">
-          <input type="text" class="11t form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <input type="text" class="11t form-control" placeholder="Add task"  >
           <div class="input-group-append">
             <button class="btn 11b btn-outline-secondary" type="save-tm">Save task</button>
           </div>
@@ -67,7 +67,7 @@
       <div id="hour-12" class="row  col-md-12 time-block">
         <div class="12">12PM</div>
         <div class=" input-group mb-3">
-          <input type="text" class="12t form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <input type="text" class="12t form-control" placeholder="Add task" a >
           <div class="input-group-append">
             <button class="12b btn btn-outline-secondary" type="save-tm">Save task</button>
           </div>
@@ -77,7 +77,7 @@
   <div id="hour-13" class="row  col-md-12 time-block">
         <div class="13">1PM</div>
         <div class=" input-group mb-3">
-          <input type="text" class="13t form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <input type="text" class="13t form-control" placeholder="Add task"  >
           <div class="input-group-append">
             <button class="13b btn btn-outline-secondary" type="save-tm">Save task</button>
           </div>
@@ -87,7 +87,7 @@
       <div id="hour-14" class="row  col-md-12 time-block">
         <div class="14">2PM</div>
         <div class=" input-group mb-3">
-          <input type="text" class="14t form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <input type="text" class="14t form-control" placeholder="Add task"  >
           <div class="input-group-append">
             <button class="14b btn btn-outline-secondary" type="save-tm">Save task</button>
           </div>
@@ -97,7 +97,7 @@
       <div id="hour-15" class="row  col-md-12 time-block">
         <div class="15">3PM</div>
         <div class=" input-group mb-3">
-          <input type="text" class="15t form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <input type="text" class="15t form-control" placeholder="Add task"  >
           <div class="input-group-append">
             <button class="btn 15b btn-outline-secondary" type="save-tm">Save task</button>
           </div>
@@ -106,7 +106,7 @@
       <div id="hour-16" class="row  col-md-12 time-block">
         <div class="16">4PM</div>
         <div class=" input-group mb-3">
-          <input type="text" class="16t form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <input type="text" class="16t form-control" placeholder="Add task"  >
           <div class="input-group-append">
             <button class="16b btn btn-outline-secondary" type="save-tm">Save task</button>
           </div>
@@ -115,7 +115,7 @@
       <div id="hour-17" class="row  col-md-12 time-block">
         <div class="17">5PM</div>
         <div class=" input-group mb-3">
-          <input type="text" class="17t form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <input type="text" class="17t form-control" placeholder="Add task" >
           <div class="input-group-append">
             <button class="btn 17b btn-outline-secondary" type="save-tm">Save task</button>
           </div>
